# aiatresp

./: .gitignore  CHANGELOG.md  COMPARISON.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: VERSIONS.md
docs/version_plots/: run_preflight.batch  run_v1.batch  run_v10_2024.batch  run_v10a.batch  run_v10b.batch  run_v10c.batch  run_v1_preflight.batch  run_v2.batch  run_v2_2011.batch  run_v3.batch  run_v3_2012.batch  run_v4.batch  run_v4_2013.batch  run_v6a.batch  run_v6b.batch  run_v7.batch  run_v8_2017.batch  run_v8a.batch  run_v8b.batch  run_v9.batch  run_v9_2019.batch
examples/: compare_with_ssw.py  generate_version_graphs.py
notebooks/: Compare_with_SolarSoft.ipynb  DEM_example.ipynb  Generating_responses.ipynb
recipes/aiatresp/: recipe.yaml
src/aiatresp/: __init__.py  catalog.py  cli.py  compat.py  config.py  downloader.py  fits.py  generator.py  models.py  parallel.py  storage.py
tests/: test_all.py  test_compat.py  test_fits.py  test_response_calculation.py  validate_all.py
