[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiatresp"
version = "0.1.0"
description = "Reproducible, Python-native SDO/AIA temperature-response generation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2",
  "astropy>=6.0",
  "aiapy>=0.10,<1",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.scripts]
aia-response = "aiatresp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
