[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiatresp"
version = "0.1.1"
description = "Reproducible, Python-native SDO/AIA temperature-response generation"

readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"

authors = [
    { name = "Jagatheshwaran R" },
    { name = "Aparna G R" }
]


keywords = [
    "solar physics",
    "solar",
    "SDO",
    "AIA",
    "temperature response",
    "DEM",
    "SunPy",
    "AIAPY",
    "astrophysics",
    "astronomy",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",


    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",


    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",

    "astropy>=6.0",
    "aiapy>=0.10,<1",
    "scipy>=1.10",
    "tqdm>=4.66",
    "platformdirs>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Jagathesh04/aiatresp"
Repository = "https://github.com/Jagathesh04/aiatresp"
Documentation = "https://github.com/Jagathesh04/aiatresp#readme"
Changelog = "https://github.com/Jagathesh04/aiatresp/blob/master/CHANGELOG.md"
Issues = "https://github.com/Jagathesh04/aiatresp/issues"


[project.scripts]
aia-response = "aiatresp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
